# wobot_assignment

./: README.md
1_stream_to_frames/: stream_to_frames.sh
2_CaptureFaces/: CMakeLists.txt  CaptureFaces.cpp
